correct a missing space and reduce h2 bottom margin

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,6 +42,10 @@ header {
     box-shadow: 0 0 10px 0 #333333;
 }
 
+h2 {
+    margin-bottom: -4%;
+}
+
 #logo {
     padding: 0 5px 0 20px;
     margin: 0;
